# cs-betting-helper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_integration.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_jsonb_timestamps.py  003_add_autoincrement_sequences.py  003_tournament_config.py  004_add_admin_config.py  004_authorized_users.py
app/: __init__.py
app/analysis/: engine.py
app/api/: admin.py  main.py  pages.py  routes.py  schemas.py
app/bot/: telegram.py
app/core/: config.py
app/db/: models.py  session.py
app/frontend/templates/: 404.html  admin.html  base.html  dashboard.html  logs.html  match.html
app/providers/: oddspapi.py
app/services/: authorized_users_service.py  config_service.py  tournament_service.py
app/tasks/: celery_app.py  polling.py  reanalysis.py
db/: schema.sql
scripts/: migrate.sh
test/resources/: odds.json
