[project]
name = "cs-betting-helper"
version = "0.2.0"
description = "CS2 odds scanner: anomaly detection, arbitrage, alerts"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Task queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # HTTP client
    "httpx>=0.25",
    # Telegram
    "aiogram>=3.4",
    # Data
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # Charts
    "plotly>=5.18",
    # Utils
    "rich>=13.7",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.2", "mypy>=1.8"]
